--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "add-to-cart",
   "version": "1.0.0",
-  "description": "",
+  "description": "const express = require('express');\r const app = express();\r const mongoose = require('mongoose');\r const session = require('express-session');\r const jwt = require('jsonwebtoken');\r const multer = require('multer');\r app.set('view engine', 'ejs')",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
